# cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_name}}/01_notebooks/config/: main.yaml
{{cookiecutter.project_name}}/app/src/: process.py  train_model.py
